--- a/src/app/pages/contacts/contacts.component.html
+++ b/src/app/pages/contacts/contacts.component.html
@@ -100,9 +100,9 @@
                   <li>
                     <div style="text-align: center; margin-top: 2px; margin-left: 230px; vertical-align: middle;">
                       <select (change)="changeLanguage($event)">
-                        <option value="en">Eng</option>
-                        <option value="ru">Ру</option>
-                        <option value="uz">O'z</option>
+                        <option value="en" [selected]="translate.currentLang === 'en'">Eng</option>
+                        <option value="ru" [selected]="translate.currentLang === 'ru'">Ру</option>
+                        <option value="uz" [selected]="translate.currentLang === 'uz'">O'z</option>
                       </select>
                     </div>
                   </li>
@@ -267,16 +267,14 @@
           </div>
           <div class="col-md-10 col-lg-7 col-xl-4 text-xl-right">
             <ul class="group-xs group-middle">
-              <li><a class="icon novi-icon icon-md-middle icon-circle icon-secondary-5-filled mdi mdi-facebook"
-                  href="#"></a></li>
-              <li><a class="icon novi-icon icon-md-middle icon-circle icon-secondary-5-filled mdi mdi-twitter"
-                  href="#"></a></li>
-              <li><a class="icon novi-icon icon-md-middle icon-circle icon-secondary-5-filled mdi mdi-instagram"
-                  href="#"></a></li>
-              <li><a class="icon novi-icon icon-md-middle icon-circle icon-secondary-5-filled mdi mdi-google"
-                  href="#"></a></li>
-              <li><a class="icon novi-icon icon-md-middle icon-circle icon-secondary-5-filled mdi mdi-linkedin"
-                  href="#"></a></li>
+              <li>
+                <a class="icon novi-icon icon-md-middle icon-circle icon-secondary-5-filled mdi mdi-instagram"
+                  href="#"></a>
+              </li>
+              <li>
+                <a class="icon novi-icon icon-md-middle icon-circle icon-secondary-5-filled mdi mdi-telegram"
+                  href="#"></a>
+              </li>  
             </ul>
           </div>
         </div>
