--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -35,30 +35,27 @@
     <header class="section page-header breadcrumbs-custom-wrap bg-gradient bg-secondary-2 novi-background bg-cover">
       <!-- RD Navbar-->
       <div class="rd-navbar-wrap rd-navbar-default">
-        <nav class="rd-navbar" data-layout="rd-navbar-fixed" data-sm-layout="rd-navbar-fixed"
+        <app-navbar></app-navbar>
+        <!-- <nav class="rd-navbar" data-layout="rd-navbar-fixed" data-sm-layout="rd-navbar-fixed"
           data-md-layout="rd-navbar-fixed" data-md-device-layout="rd-navbar-fixed" data-lg-layout="rd-navbar-fullwidth"
           data-xl-layout="rd-navbar-static" data-lg-device-layout="rd-navbar-fixed"
           data-xl-device-layout="rd-navbar-static" data-md-stick-up-offset="2px" data-lg-stick-up-offset="2px"
           data-stick-up="true" data-sm-stick-up="true" data-md-stick-up="true" data-lg-stick-up="true"
           data-xl-stick-up="true">
           <div class="rd-navbar-inner">
-            <!-- RD Navbar Panel-->
             <div class="rd-navbar-panel">
-              <!-- RD Navbar Toggle-->
               <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap">
                 <span></span>
               </button>
-              <!-- RD Navbar Brand-->
-              <!-- <div class="rd-navbar-brand">
+              <div class="rd-navbar-brand">
                 <a class="brand-name" href="/"><img class="logo-default"
                     src="../../../assets/images/logo-default-208x46.png" alt="" width="208" height="46" /><img
                     class="logo-inverse" src="../../../assets/images/logo-inverse-208x46.png" alt="" width="208"
                     height="46" /></a>
-              </div> -->
+              </div>
             </div>
             <div class="rd-navbar-aside-right">
               <div class="rd-navbar-nav-wrap">
-                <!-- RD Navbar Nav-->                
                 <ul class="rd-navbar-nav">
                   <li>
                     <div style="text-align: center; margin-top: 2px; margin-left: 230px; vertical-align: middle;">
@@ -78,7 +75,7 @@
               </div>
             </div>
           </div>
-        </nav>
+        </nav> -->
       </div>
       <!-- Breadcrumbs-->
       <section class="breadcrumbs-custom" style="
@@ -161,9 +158,7 @@
                 <div class="box-minimal-icon box-minimal-icon-lg novi-icon mdi mdi-beach"></div>
                 <h6 class="box-minimal-title">{{ "home.summerTours" | translate }}</h6>
               </div>
-              <p>
-                {{ "home.summerTourInfo" | translate }}
-              </p>
+              <p>{{ "home.summerTourInfo" | translate }}</p>
             </article>
           </div>
         </div>
@@ -177,9 +172,7 @@
           <div class="col-sm-12 col-md-10 col-lg-8 col-xl-7 col-xxl-6">
             <h3>{{ "about.destinations" | translate }}</h3>
             <div class="divider divider-decorate"></div>
-            <p>
-              {{ "about.destInfo" | translate }}
-            </p>
+            <p>{{ "about.destInfo" | translate }}</p>
           </div>
         </div>
         <div class="row row-50" data-lightgallery="group">
@@ -283,10 +276,10 @@
     <footer class="section page-footer page-footer-minimal novi-background bg-cover text-center bg-gray-darker">
       <div class="container container-wide">
         <div class="row row-fix justify-content-sm-center align-items-md-center row-30">
-          <!-- <div class="col-md-10 col-lg-7 col-xl-4 text-xl-left">
-            <a href="index.html"><img class="inverse-logo" src="../../../assets/images/logo-inverse-208x46.png" alt=""
-                width="208" height="46" /></a>
-          </div> -->
+          <div class="col-md-10 col-lg-7 col-xl-4 text-xl-left">
+            <!-- <a href="index.html"><img class="inverse-logo" src="../../../assets/images/logo-inverse-208x46.png" alt=""
+                width="208" height="46" /></a> -->
+          </div>
           <div class="col-md-10 col-lg-7 col-xl-4">
             <p class="right" >
               &#169;&nbsp;<span class="copyright-year"></span>{{ "allRights" | translate }}
