--- a/src/app/pages/contacts/contacts.component.html
+++ b/src/app/pages/contacts/contacts.component.html
@@ -75,27 +75,25 @@
     <header class="section page-header breadcrumbs-custom-wrap bg-gradient bg-secondary-2 novi-background bg-cover">
       <!-- RD Navbar-->
       <div class="rd-navbar-wrap rd-navbar-default">
-        <nav class="rd-navbar" data-layout="rd-navbar-fixed" data-sm-layout="rd-navbar-fixed"
+        <app-navbar></app-navbar>
+
+        <!-- <nav class="rd-navbar" data-layout="rd-navbar-fixed" data-sm-layout="rd-navbar-fixed"
           data-md-layout="rd-navbar-fixed" data-md-device-layout="rd-navbar-fixed" data-lg-layout="rd-navbar-fullwidth"
           data-xl-layout="rd-navbar-static" data-lg-device-layout="rd-navbar-fixed"
           data-xl-device-layout="rd-navbar-static" data-md-stick-up-offset="2px" data-lg-stick-up-offset="2px"
           data-stick-up="true" data-sm-stick-up="true" data-md-stick-up="true" data-lg-stick-up="true"
           data-xl-stick-up="true">
           <div class="rd-navbar-inner">
-            <!-- RD Navbar Panel-->
             <div class="rd-navbar-panel">
-              <!-- RD Navbar Toggle-->
               <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
-              <!-- RD Navbar Brand-->
-              <!-- <div class="rd-navbar-brand"><a class="brand-name" href="index.html"><img class="logo-default"
+              <div class="rd-navbar-brand"><a class="brand-name" href="index.html"><img class="logo-default"
                     src="../../../assets/images/logo-default-208x46.png" alt="" width="208" height="46" /><img
                     class="logo-inverse" src="../../../assets/images/logo-inverse-208x46.png" alt="" width="208"
                     height="46" /></a>
-              </div> -->
+              </div>
             </div>
             <div class="rd-navbar-aside-right">
               <div class="rd-navbar-nav-wrap">
-                <!-- RD Navbar Nav-->
                 <ul class="rd-navbar-nav">
                   <li>
                     <div style="text-align: center; margin-top: 2px; margin-left: 230px; vertical-align: middle;">
@@ -115,7 +113,7 @@
               </div>
             </div>
           </div>
-        </nav>
+        </nav> -->
       </div>
       <!-- Breadcrumbs-->
       <section class="breadcrumbs-custom"
@@ -259,9 +257,10 @@
     <footer class="section page-footer page-footer-minimal novi-background bg-cover text-center bg-gray-darker">
       <div class="container container-wide">
         <div class="row row-fix justify-content-sm-center align-items-md-center row-30">
-          <!-- <div class="col-md-10 col-lg-7 col-xl-4 text-xl-left"><a href="index.html"><img class="inverse-logo"
-                src="../../../assets/images/logo-inverse-208x46.png" alt="" width="208" height="46" /></a>
-          </div> -->
+          <div class="col-md-10 col-lg-7 col-xl-4 text-xl-left">
+            <!-- <a href="index.html"><img class="inverse-logo"
+                src="../../../assets/images/logo-inverse-208x46.png" alt="" width="208" height="46" /></a> -->
+          </div>
           <div class="col-md-10 col-lg-7 col-xl-4">
             <p class="right">&#169;&nbsp;<span class="copyright-year"></span>{{'allRights' | translate}}
           </div>
@@ -289,6 +288,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
+
 
 </body>
 
