--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -99,7 +99,7 @@
                 </li>
                 <li class="box-inline list-inline-item">
                   <span class="icon novi-icon icon-md-smaller icon-secondary mdi mdi-map-marker"></span>
-                  <a href="#" style="color: #fff">2130 Fulton Street, San Diego, CA 94117-1080 USA</a>
+                  <a href="#" style="color: #fff">{{"compAddress" | translate}}</a>
                 </li>
                 <li class="box-inline list-inline-item">
                   <span class="icon novi-icon icon-md-smaller icon-secondary mdi mdi-email"></span>
@@ -107,7 +107,7 @@
                 </li>
               </ul>
 
-              <div style="text-align: center; margin-top: 2px; margin-left: 230px; vertical-align: middle;">
+              <div style="text-align: center; margin-top: 2px; margin-left: 490px; vertical-align: middle;">
                 <select (change)="changeLanguage($event)">
                   <option value="en" [selected]="translate.currentLang === 'en'">Eng</option>
                   <option value="ru" [selected]="translate.currentLang === 'ru'">Ру</option>
@@ -115,7 +115,7 @@
                 </select>
               </div>
 
-              <ul class="list-inline">
+              <ul class="list-inline" style="margin-top: 3px;">
                 <li class="list-inline-item">
                   <a class="icon novi-icon icon-sm-bigger icon-gray-1 mdi mdi-instagram" href="#"></a>
                 </li>
@@ -142,7 +142,7 @@
             <div class="rd-navbar-aside-center">
               <div class="rd-navbar-nav-wrap">
                 <!-- RD Navbar Nav-->
-                <ul class="rd-navbar-nav">
+                <ul class="rd-navbar-nav" style="margin-left: 250px;" >
                   <li class="active">
                     <a href="/" style="text-decoration: underline">{{"baseHome" | translate}}</a>
                   </li>
@@ -166,10 +166,9 @@
                     z-index: 2;">
                 <ul style="display: flex; flex-direction: column; list-style: none; padding: 0; margin: 0;">
                   <a href="/" style="padding: 10px; border-bottom: 1px solid #ccc">{{"baseHome" | translate}}</a>
-                  <a href="/about" style="padding: 10px; border-bottom: 1px solid #ccc">{{ "baseAbout" | translate
-                    }}</a>
-                  <a href="/contacts" style="padding: 10px; border-bottom: 1px solid #ccc">{{ "baseContacts" | translate
-                    }}</a>
+                  <a href="/about" style="padding: 10px; border-bottom: 1px solid #ccc">{{ "baseAbout" | translate}}</a>
+                  <a href="/contacts" style="padding: 10px; border-bottom: 1px solid #ccc">{{ "baseContacts" |
+                    translate}}</a>
                 </ul>
               </div>
             </div>
@@ -184,7 +183,7 @@
                   display: block;
                   background-color: #f9f9f9;
                   border: 1px solid #ccc;
-                  width: 245px;
+                  width: 295px;
                   position: absolute;
                   top: 50px;
                   right: 0;
@@ -193,20 +192,20 @@
               <ul class="list-inline">
                 <ul class="list-comma">
                   <li>
-                    <a href="/" style="padding: 10px; border-bottom: 1px solid #ccc">{{"baseHome" | translate}}</a>
+                    <a href="/home" style="padding: 10px; border-bottom: 1px solid #ccc">{{"baseHome" | translate}}</a>
                   </li>
                   <li>
-                    <a href="/about" style="padding: 10px; border-bottom: 1px solid #ccc">{{ "baseAbout" | translate
-                      }}</a>
+                    <a href="/about" style="padding: 10px; border-bottom: 1px solid #ccc">{{ "baseAbout" |
+                      translate}}</a>
                   </li>
                   <li>
-                    <a href="/contacts" style="padding: 10px; border-bottom: 1px solid #ccc">{{ "baseContacts" |
-                      translate }}</a>
+                    <a href="/contacts" style="padding: 10px; border-bottom: 1px solid #ccc">{{ "baseContacts"
+                      |translate }}</a>
                   </li>
                 </ul>
                 <li class="box-inline list-inline-item" style="
                       display: flex;
-                      justify-content: center;
+                      justify-content: left;
                       align-items: center;">
                   <span class="icon novi-icon icon-md-smaller icon-secondary mdi mdi-phone"></span>
                   <ul class="list-comma">
@@ -221,12 +220,12 @@
                 </li>
                 <li class="box-inline list-inline-item" style="
                       display: flex;
-                      justify-content: center;
+                      justify-content: left;
                       align-items: center;
-                      margin-top: -0px;
+                      margin-top: 5px;
                     ">
                   <span class="icon novi-icon icon-md-smaller icon-secondary mdi mdi-map-marker"></span><a href="#"
-                    style="color: #000; font-size: 12px">2130 Fulton Street, San Diego, CA 94117-1080 USA</a>
+                    style="color: #000; font-size: 12px">{{"compAddress" | translate}}</a>
                 </li>
                 <li class="box-inline list-inline-item" style="margin-top: -10px">
                   <span class="icon novi-icon icon-md-smaller icon-secondary mdi mdi-email"></span><a href="mailto:#"
@@ -236,7 +235,7 @@
 
               <ul class="list-inline" style="margin-top: 10px">
                 <li class="list-inline-item">
-                  <div style=" margin-top: 2px; margin-left: 23px; vertical-align: middle;">
+                  <div style=" margin-top: 2px; margin-left: 0px; vertical-align: middle;">
                     <select (change)="changeLanguage($event)">
                       <option value="en" [selected]="translate.currentLang === 'en'">Eng</option>
                       <option value="ru" [selected]="translate.currentLang === 'ru'">Ру</option>
@@ -273,7 +272,7 @@
               <div class="swiper-slide-caption">
                 <div class="container container-bigger swiper-main-section">
                   <div class="row row-fix justify-content-sm-center justify-content-md-start">
-                    <div class="col-md-6 col-lg-5 col-xl-4 col-xxl-5">
+                    <div class="col-md-4 col-lg-5 col-xl-4 col-xxl-5">
                       <h3>{{ "home.head" | translate }}</h3>
                       <!-- <div class="divider divider-decorate"></div> -->
                       <p class="text-spacing-sm">
@@ -715,6 +714,10 @@
     <footer class="section page-footer page-footer-minimal novi-background bg-cover text-center bg-gray-darker">
       <div class="container container-wide">
         <div class="row row-fix justify-content-sm-center align-items-md-center row-30">
+          <div class="col-md-10 col-lg-7 col-xl-4 text-xl-left">
+            <!-- <a href="index.html"><img class="inverse-logo" src="../../../assets/images/logo-inverse-208x46.png" alt=""
+                width="208" height="46" /></a> -->
+          </div>
           <div class="col-md-10 col-lg-7 col-xl-4">
             <p class="right">
               &#169;&nbsp;<span class="copyright-year"></span>
@@ -724,23 +727,11 @@
           <div class="col-md-10 col-lg-7 col-xl-4 text-xl-right">
             <ul class="group-xs group-middle">
               <li>
-                <a class="icon novi-icon icon-md-middle icon-circle icon-secondary-5-filled mdi mdi-facebook"
-                  href="#"></a>
-              </li>
-              <li>
-                <a class="icon novi-icon icon-md-middle icon-circle icon-secondary-5-filled mdi mdi-twitter"
-                  href="#"></a>
-              </li>
-              <li>
                 <a class="icon novi-icon icon-md-middle icon-circle icon-secondary-5-filled mdi mdi-instagram"
                   href="#"></a>
               </li>
               <li>
-                <a class="icon novi-icon icon-md-middle icon-circle icon-secondary-5-filled mdi mdi-google"
-                  href="#"></a>
-              </li>
-              <li>
-                <a class="icon novi-icon icon-md-middle icon-circle icon-secondary-5-filled mdi mdi-linkedin"
+                <a class="icon novi-icon icon-md-middle icon-circle icon-secondary-5-filled mdi mdi-telegram"
                   href="#"></a>
               </li>
             </ul>
