--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,5 @@
 @import 'assets/css/bootstrap.css';
 @import 'assets/css/fonts.css';
 @import 'assets/css/style.css';
+
+@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap");
