phone, email fixes

--- a/src/app/pages/contacts/contacts.component.html
+++ b/src/app/pages/contacts/contacts.component.html
@@ -148,8 +148,8 @@
               <h6>{{'phones' | translate}}</h6>
               <div class="box-simple-text">
                 <ul class="list list-0">
-                  <li><a href="tel:#">1-800-6543-765</a></li>
-                  <li><a href="tel:#">1-800-3434-876</a></li>
+                  <li><a href="tel:#">+998 90 830-95-95</a></li>
+                  <!-- <li><a href="tel:#">1-800-3434-876</a></li> -->
                 </ul>
               </div>
             </article>
@@ -161,7 +161,7 @@
               <h6>{{'email' | translate}}</h6>
               <div class="box-simple-text">
                 <ul class="list list-0">
-                  <li><a href="mailto:#">mail&#64;demolink.org</a></li>
+                  <li><a href="mailto:#">info&#64;memorytour.uz</a></li>
                 </ul>
               </div>
             </article>
