--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -90,11 +90,11 @@
                   <span class="icon novi-icon icon-md-smaller icon-secondary mdi mdi-phone"></span>
                   <ul class="list-comma">
                     <li>
-                      <a href="tel:#" style="color: #fff">1-800-1234-567</a>
+                      <a href="tel:#" style="color: #fff">+998 90 830-95-95</a>
                     </li>
-                    <li>
+                    <!-- <li>
                       <a href="tel:#" style="color: #fff">1-800-6780-345</a>
-                    </li>
+                    </li> -->
                   </ul>
                 </li>
                 <li class="box-inline list-inline-item">
@@ -103,7 +103,7 @@
                 </li>
                 <li class="box-inline list-inline-item">
                   <span class="icon novi-icon icon-md-smaller icon-secondary mdi mdi-email"></span>
-                  <a href="mailto:#" style="color: #fff">mail&#64;demolink.org</a>
+                  <a href="mailto:#" style="color: #fff">info&#64;memorytour.uz</a>
                 </li>
               </ul>
 
